--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,6 @@
   </head>
   <body>
     <app-root></app-root>
+    <script src="https://cdn.jsdelivr.net/npm/TagCloud@2.2.0/dist/TagCloud.min.js"></script>
   </body>
 </html>
